# wisdomia-monolithic

./: .gitignore  Cargo.toml  decode-wisdoms.sh  docker-compose.yml  encode-wisdoms.sh  run.sh
.github/workflows/: ci.yml  manual-workflow.yml
migrations/: 0001_create_wisdoms_table.down.sql  0001_create_wisdoms_table.up.sql  0002_initial-wisdoms-population.down.sql  0002_initial-wisdoms-population.up.sql  0003_current_wisdom.down.sql  0003_current_wisdom.up.sql
server/: Cargo.toml
server/src/: constants.rs  main.rs  state.rs
server/src/db/: connect.rs
server/src/middlewares/: mod.rs  response_mapper_mw.rs
server/src/middlewares/rate_limiter/: rate_limit_info.rs  rate_limit_mw.rs  rate_limiter_config.rs  redis_interactor.rs
server/src/models/: dto.rs  mod.rs
server/src/routes/: mod.rs  wisdoms.rs
src/: helpers.rs  main.rs  state.rs  wisdoms_checker.rs
src/db/: connect.rs  mod.rs  queries.rs
src/middlewares/: mod.rs  response_mapper_mw.rs
src/middlewares/rate_limiter/: mod.rs  rate_limit_info.rs  rate_limit_mw.rs  rate_limiter_config.rs  redis_interactor.rs
src/models/: wisdom.rs
src/routes/: dbg.rs  mod.rs  wisdoms.rs
worker/: Cargo.toml
worker/src/: db_connect.rs  wisdoms_checker.rs
worker_wisdoms_checker/: Cargo.toml  readme.md
worker_wisdoms_checker/src/: main.rs  wisdoms_checker.rs
worker_wisdoms_daily_rotator/: Cargo.toml
worker_wisdoms_daily_rotator/src/: daily_rotator.rs  db_connect.rs  main.rs
