[package]
name = "wisdomia-monolithic"
version = "0.1.0"
edition = "2021"


[dependencies]
axum = { version = "0.7.3", features = ["macros"] }
tokio = { version = "1.35.1", features = ["full"] }
serde = { version = "1.0.194", features = ["derive"] }
tracing-fast-dev = "1.0.0"
serde_json = "1.0.112"
dotenv = "0.15.0"
sqlx = { version = "0.7.4", features = ["postgres","runtime-tokio-rustls"] }
uuid = { version = "1.7.0", features = ["v4", "fast-rng"] }
