[workspace]
members = ["server", "worker"]

resolver = "2"

[profile.release]
strip = true      # Remove symbols from binary
opt-level = "s"   # Optimize for size
lto = true        # Optimize at the link stage, dont care for longer linking times.
codegen-units = 1 # Longer compile time at expense of build time paralelization


