[package]
name = "worker"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35.1", features = ["full"] }
serde = { version = "1.0.194", features = ["derive"] }
serde_json = "1.0.112"
dotenv = "0.15.0"
sqlx = { version = "0.7.4", features = ["postgres","runtime-tokio-rustls"] }
base64="0.22.1"
teloxide = { version = "0.12", features = ["macros"] }